1.19-2.1.1:
- Update to 1.19.4

1.19-2.1.0:
- Updated to Latest McJtyLib and made compatible with 1.19.3
- Fixes to JEI integration

1.19-2.0.2:
- Small fix

1.19-2.0.1:
- Fixed some bad descriptions (effectId -> effect)
- Added a new type of effect: 'growtick' and a default charm that uses it

1.19-2.0.0:
- Fancy Trinkets!
