@@ -1,3 +1,6 @@
+Upcoming:
+- Update for latest McJtyLib fixing the registryAccess() problem
+
 1.19-2.1.1:
 - Update to 1.19.4
 
